--- a/themes/zubair/scss/app.scss
+++ b/themes/zubair/scss/app.scss
@@ -109,12 +109,16 @@ hr {
         }
     }
 
-    ul.orbit-container {
-        height: auto !important;
-    }
+    // ul.orbit-container {
+    //     height: auto !important;
+    // }
 
-    li.orbit-slide {
-        max-height: none !important;
+    // ul.orbit-container {
+    //     height: 300 !important;
+    // }
+
+    li.orbit-figure {
+        max-height: 300 !important;
     }
 }
 // End Orbit Slider
