--- a/themes/zubair/scss/_mobile.scss
+++ b/themes/zubair/scss/_mobile.scss
@@ -44,18 +44,18 @@
     }
 }
 
-@media print, screen and (min-width: 40em) {
-    .clean-hero-slider .orbit-controls .orbit-previous {
-        left: auto;
-        right: 2.4rem;
-    }
-}
+// @media print, screen and (min-width: 40em) {
+//     .clean-hero-slider .orbit-controls .orbit-previous {
+//         left: 0.5rem;
+//         right: 2.4rem;
+//     }
+// }
 
-@media print, screen and (min-width: 40em) {
-    .clean-hero-slider .orbit-controls .orbit-next {
-        right: 0.5rem;
-    }
-}
+// @media print, screen and (min-width: 40em) {
+//     .clean-hero-slider .orbit-controls .orbit-next {
+//         right: 0.5rem;
+//     }
+// }
 
 @media print, screen and (min-width: 40em) {
     .clean-hero-slider .orbit-bullets {
