--- a/themes/zubair/scss/app.scss
+++ b/themes/zubair/scss/app.scss
@@ -55,8 +55,8 @@ hr {
     margin-bottom: 3rem;
 
     .orbit-caption {
-        width: auto;
-        height: auto;
+        // width: auto;
+        // height: auto;
         background: $black;
         position: absolute;
         text-align: center;
